# router/white_list.go
@@ -6,6 +6,6 @@ var AdminAuthWhiteList = map[string]bool{
 	"/admin/v1/user/verify/captcha/check": true,
 	"/admin/v1/user/verify/captcha":       true,
 	"/admin/v1/user/login":                true,
-	"/customer/v1/user/login":             true,
-	"/customer/v1/user/register":          true,
+	"/api/app/customer/v1/user/login":     true,
+	"/api/app/customer/v1/user/register":  true,
 }
